* Fix: add clearfix after YTC widget to prevent jumping out of widget block on bad styled themes * Release minor bugfix version 2.4.0.2
git-svn-id: https://plugins.svn.wordpress.org/youtube-channel/trunk@1000907 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/assets/css/youtube-channel.css
+++ b/assets/css/youtube-channel.css
@@ -1,6 +1,16 @@
+
 .youtube_channel {
 	float: left;
 	clear: both;
+}
+.widget_youtube-channel:after,
+.youtube_channel:after {
+	visibility: hidden;
+	display: block;
+	font-size: 0;
+	content: " ";
+	clear: both;
+	height: 0;
 }
 .youtube_channel .ytc_video_container {
 	float: left;
